# brrpolice

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml  docker-publish.yml
ci/goss/: docker-image.yaml
crates/score-simulator/: Cargo.toml
crates/score-simulator/src/: main.rs
docs/: adr-0001-score-based-banning.md  adr-0002-db-pruning.md  adr-0003-churn-sample-amplification.md  adr-0006-candidate-comparison.md  adr-0006-evaluation-spec.md  adr-0006-rate-primary-progress-inefficiency.md  policy-engine.md
migrations/: 0001_initial_schema.sql  0002_peer_session_bannable_columns.sql  0003_pending_ban_intents.sql  0004_peer_session_score_fields.sql  0005_peer_session_churn_fields.sql  0006_peer_session_churn_amplifier.sql
src/: backoff.rs  config.rs  control.rs  http.rs  lib.rs  main.rs  metrics.rs  persistence.rs  policy.rs  qbittorrent.rs  runtime.rs  simulator.rs  types.rs
testdata/qbittorrent/v5.1/: torrent-peers.json  torrents-info-active.json
