[package]
name = "brrpolice"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.4"
config = { version = "0.15.18", default-features = false, features = ["toml"] }
humantime = "2.3.0"
ipnet = "2.11.0"
metrics = "0.24.2"
reqwest = { version = "0.12.24", default-features = false, features = ["cookies", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9.8"
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
